=== (ongoing) ===

=== 0.3.4 ===

- Improved urls.

=== 0.3.3 ===

- Added book type to flipbooks.

=== 0.3.2 ===

- Added page type to flipbook pages.

=== 0.3.1 ===

- Added image to page model.

=== 0.3 ===

- Added flipbook html pages.

=== 0.2.1 ===

- Transformed category field from many2many to foreign key.

=== 0.2 ===

- Added flipbook categories.

=== 0.1 ===

- Initial commit.